--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.159",
