--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2",
+    "vuex-class": "^0.3.2",
     "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
