--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "now-start": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -31,6 +32,7 @@
     "@vue/cli-service": "^4.1.2",
     "@vue/test-utils": "1.0.0-beta.30",
     "babel-core": "7.0.0-bridge.0",
+    "nswag": "^13.9.4",
     "sass": "^1.24.3",
     "sass-loader": "^8.0.0",
     "typescript": "~3.9.3",
